[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/icons/new_styleboxflat.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Fonts/DefaultFont.tres" type="DynamicFont" id=3]


[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -138, 69 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -130.0
margin_bottom = 130.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20

[node name="SinglePlayer" type="Button" parent="VBoxContainer"]
margin_left = 38.0
margin_right = 147.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Single Player"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
margin_left = 41.0
margin_top = 70.0
margin_right = 144.0
margin_bottom = 120.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Multi Player"

[node name="Option" type="Button" parent="VBoxContainer"]
margin_left = 42.0
margin_top = 140.0
margin_right = 142.0
margin_bottom = 190.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 6 )
text = "Option"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_left = 42.0
margin_top = 210.0
margin_right = 142.0
margin_bottom = 260.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 9 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer" to="." method="_on_MultiPlayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
